# RustSwiftPi

./: .env.example  .gitignore  ARCH-Rust.md  Cargo.toml  DROP1.md  DROP2.md  README.md  ROADMAP.md
PiSwift/: Package.swift  README.md
PiSwift/Scripts/: build-rust-macos-universal.sh
PiSwift/Sources/PiRustFFI/: shim.c
PiSwift/Sources/PiRustFFI/include/PiRustFFI/: pi_swift_ffi.h
PiSwift/Sources/PiSwift/: PiSwiftClient.swift
PiSwift/Tests/PiSwiftTests/: PiSwiftTests.swift
adapters/adapter_fs/: Cargo.toml
adapters/adapter_fs/src/: lib.rs
adapters/adapter_openai/: Cargo.toml
adapters/adapter_openai/src/: lib.rs
adapters/adapter_pods/: Cargo.toml
adapters/adapter_pods/src/: lib.rs
adapters/adapter_proxy/: Cargo.toml
adapters/adapter_proxy/src/: lib.rs
adapters/adapter_shell/: Cargo.toml
adapters/adapter_shell/src/: lib.rs
adapters/adapter_slack/: Cargo.toml
adapters/adapter_slack/src/: lib.rs
adapters/adapter_swift_ffi/: Cargo.toml
adapters/adapter_swift_ffi/src/: lib.rs
adapters/adapter_tui/: Cargo.toml
adapters/adapter_tui/src/: lib.rs
adapters/adapter_web_ui/: Cargo.toml
adapters/adapter_web_ui/src/: lib.rs
app/: Cargo.toml
app/src/: main.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
