[workspace]
resolver = "2"
members = [
  "contracts",
  "core",
  "adapters/adapter_openai",
  "adapters/adapter_fs",
  "adapters/adapter_shell",
  "adapters/adapter_swift_ffi",
  "adapters/adapter_tui",
  "adapters/adapter_slack",
  "adapters/adapter_web_ui",
  "adapters/adapter_pods",
  "adapters/adapter_proxy",
  "app",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["pi-mono-rust translators"]
repository = "https://github.com/badlogic/pi-mono"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
futures = "0.3"
once_cell = "1"
proptest = "1"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "fs", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
