[package]
name = "pi_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pi_contracts = { path = "../contracts" }
async-trait.workspace = true
serde_json.workspace = true
futures.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
