[package]
name = "pi_swift_ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
pi_contracts = { path = "../../contracts" }
pi_core = { path = "../../core" }
pi_adapter_openai = { path = "../adapter_openai" }
pi_adapter_fs = { path = "../adapter_fs" }
pi_adapter_shell = { path = "../adapter_shell" }
once_cell.workspace = true
serde_json.workspace = true
tokio.workspace = true
dotenvy.workspace = true
